--- a/UniversalMenu/www/index.html
+++ b/UniversalMenu/www/index.html
@@ -15,6 +15,8 @@
     </head>
     <body>
        
-        <b>Hello world!</b>
+        <a href="menus.html"> login </a>
+        <!-- need to figure out a way to query all of the restaurants -->
+
     </body>
 </html>
